# codando

./: .gitignore  README.md  burocracia_de_implementação.txt  pyproject.toml  regra_de_negocio.txt
api/: pyproject.toml
api/src/domain/groups/: __init__.py  product_group.py
api/src/domain/models/: dependency_injection.py  injection.py  product.py
api/src/domain/usecases/: __init__.py  create_product.py  get_database_controller.py  get_injection.py
api/src/entrypoints/routes/: product.py
api/src/infraestructure/core_bridge_adapters/: __init__.py  core_bridge_adapter.py
api/src/infraestructure/core_dependency_injection_factories/: __init__.py  core_dependency_injection_factory_json.py
api/src/infraestructure/database_connection_factories/: __init__.py  database_connection_factory_postgres.py
api/src/infraestructure/database_controller_factories/: __init__.py  database_controller_factory_postgres.py
api/src/infraestructure/database_controllers/: database_controller_postgres.py
api/src/infraestructure/product_repositories/: __init__.py  product_repository_postgres.py
api/utils/: database_settings.json  dependency_injections.json
app/: package.json
backend/: main.py  pyproject.toml
backend/src/domain/models/: __init__.py  dependency_injection.py  injection.py  product.py
backend/src/domain/repositories/: product_repository.py
backend/src/domain/services/: connect_database_factory.py  database_controller.py
backend/src/domain/usecases/: __init__.py  get_injection.py
backend/utils/: database_settings.env  database_settings.json
(+45 files in other folders)
